# Monica

./: .gitignore  README.md  app_managment_data.json  error_log.txt  main.py  page_manager.py  pyproject.toml  sys_commands.py  task_manager.txt  test.py  text2numRUS.py  voice_controller.py  vosk_model.py
UI/: main_page.py  main_page.ui  main_window.py  main_window.ui  settings_page.py  ui_main_page.py  имя_файла.py
functional/: app_management.py  appmanagement.py  media_player.py  text2numRUS.py  voice_controller.py
