[tool.poetry]
name = "monica"
version = "0.1.0"
description = ""
authors = ["Kirill <kirilltymanov2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
comtypes = "^1.4.7"
pycaw = "^20240210"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
