[tool.poetry]
name = "monica"
version = "0.1.0"
description = ""
authors = ["Kirill <kirilltymanov2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
comtypes = "^1.4.7"
pycaw = "^20240210"
qtwidgets = "^1.1"
num2words = "^0.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
